--- a/src/App.css
+++ b/src/App.css
@@ -60,8 +60,8 @@
 
 .individualIssueCard{
     border: 1px solid #5b5656;
-    border-radius: 20px;
-    background-color: #5b5656;
+    border-radius: 10px;
+    background-color: #333333;
     width:500px;
     margin: 15px auto;
     color: #f0e3ff;
@@ -72,4 +72,14 @@
   font-size: 20px;
   font-weight: 700;
   color: #f8b400;
+}
+
+.heading{
+  border: 1px solid #004445;
+  background-color: #004445;
+  font-size: 35px;
+  padding: 12px;
+  color: #f0e3ff;
+  font-weight: 700;
+  margin-bottom: 20px;
 }
